# Rust_Rocket_Reqwest

./: .env  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
migrations/2020-03-31-131825_apitype/: down.sql  up.sql
migrations/2020-04-02-003652_errors/: down.sql  up.sql
src/: frontend.rs  lib.rs  lib_redis.rs  main.rs  models.rs  schema.rs
static/css/: error_style.css  style.css
static/js/: error.js  error.ts  style.js  style.ts  tsconfig.json
templates/: error.html.tera  index.html.tera
tools/: base.js
